# gba-draw

./: Cargo.toml  Makefile.toml
assets/: amy.tga  rose.tga
src/: gba_display.rs  main.rs
