[package]
name = "test-project"
version = "0.1.0"
authors = ["Michael Mogenson <michael.mogenson@gmail.com>"]
edition = "2018"

[dependencies]
gba = { git = "https://github.com/rust-console/gba" }
#embedded-graphics = "0.6.2"
embedded-graphics = { path = "../embedded-graphics/embedded-graphics" }
#tinytga = { version = "0.3.2", features = ["graphics"] }
tinytga = { path = "../embedded-graphics/tinytga", features = ["graphics"] }
#memchr = { version = "2.3.3", default-features = false }
#memchr = { path = "../rust-memchr", default-features = false }
#memchr = { git = "https://github.com/BurntSushi/rust-memchr.git", default-features = false }

[dev-dependencies]
cargo-make = "0.30"
cargo-xbuild = "0.5"
gbafix = "1.0"

[profile.release]
codegen-units = 1
incremental = false
lto = true
panic = "abort"
