[package]
name = "test-project"
version = "0.1.0"
authors = ["Michael Mogenson <michael.mogenson@gmail.com>"]
edition = "2018"

[dependencies]
gba = { git = "https://github.com/rust-console/gba" }
embedded-graphics = "0.6.2"
tinytga = { version = "0.3.2", features = ["graphics"] }

[dev-dependencies]
cargo-xbuild = "0.5"
gbafix = "1.0"
# cargo-make = "0.30" <- This breaks build by adding the use_std feature flag to memchr!

[profile.release]
codegen-units = 1
incremental = false
lto = true
panic = "abort"
